...
        super.viewDidLoad()
        
        if let photoAlbum = photoAlbum {
            updateUIWithPhotoAlbum(photoAlbum)
        }
        
        collectionView!.accessibilityIdentifier = "Photos"
    }
}
