...
        super.viewDidLoad()
        
        if let user = user {
            updateUIWithUser(user)
        }
        
        tableView.accessibilityIdentifier = "Photo Albums"
    }
}

//	MARK: UITableViewDataSource

extension UserDetailViewController: UITableViewDataSource {
...
